<resources>
  <string name="app_name">Neuland Next (Dev)</string>
</resources>