...
import { View } from 'react-native'
import {
	type Edges,
	SafeAreaProvider,
	SafeAreaView
} from 'react-native-safe-area-context'
import MapScreen from '@/components/Map/map-screen'
import { MapContext } from '@/contexts/map'
import type { ClickedMapElement, SearchResult } from '@/types/map'
import type { AvailableRoom, FriendlyTimetableEntry } from '@/types/utils'
import type { RoomOpenings } from '@/utils/map-room-utils'
import { storage } from '@/utils/storage'

...
