...
				</GestureDetector>
			)}

			{Platform.OS !== 'web' && !showAllFloors && (
				<Animated.View className="absolute right-0" style={locateStyle}>
					<Pressable
						testID="map-current-location"
						onPress={onLocate}
						disabled={!locationPermissionGranted}
						accessibilityState={{ disabled: !locationPermissionGranted }}
						accessibilityLabel={t('map.centerOnCurrentLocation')}
					>
						<View
...
