...
			]
		}
	]

	return (
		<ScrollView
			testID="profile-screen"
			contentContainerClassName="pb-8"
			contentInsetAdjustmentBehavior="automatic"
			showsVerticalScrollIndicator={false}
			refreshControl={
				isSuccess ? (
					<RefreshControl
...
						}}
						isCritical={false}
					/>
				))}

			<Pressable
				testID="profile-logout"
				onPress={logoutAlert}
				className="items-center self-center bg-card rounded-mg border-hairline border-border flex-row gap-2.5 justify-center mb-[30px] mt-2.5 min-w-copy-button-min px-10 py-3"
				disabled={isLoggingOut}
			>
				{isLoggingOut ? (
					<LoadingIndicator />
...
