...
	const handleRefresh = useCallback(() => {
		setMapLoadState(LoadingState.LOADING)
		setMapKey((prev) => prev + 1)
	}, [setMapLoadState])

	return (
		<View testID="map-screen" className="flex-1">
			{mapLoadState === LoadingState.ERROR && (
				<View
					className="flex-1 h-full justify-center absolute w-full z-[100]"
					style={{ backgroundColor }}
				>
					<ErrorView
...
					style={{ backgroundColor }}
				>
					<LoadingIndicator />
				</View>
			)}

			<View testID="map-canvas" className="flex-1">
				<NativeMapCanvas
					mapKey={mapKey}
					cameraResetRequestId={cameraResetRequestId}
					mapLoadState={mapLoadState}
					setMapLoadState={setMapLoadState}
					mapCenter={mapCenter}
...
